--- a/Coding_Interview/remove_duplicate_element_from_array.ipynb
+++ b/Coding_Interview/remove_duplicate_element_from_array.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+      "1 2 3 4 5\n",
+      "1 2 3 4 5\n"
      ]
     }
    ],
@@ -23,22 +24,21 @@
     "        print(*set(self.lst))\n",
     "        \n",
     "    def remove_manually(self):\n",
+    "        lst = sorted(self.lst)\n",
     "        n = len(self.lst)\n",
     "        unique_nums = []\n",
-    "        unique_nums.append(self.lst[0])\n",
-    "        print(unique_nums)\n",
-    "\n",
+    "        unique_nums.append(lst[0])\n",
+    "        for i in range(1, n):\n",
+    "            if lst[i]!=lst[i-1]:\n",
+    "                unique_nums.append(lst[i])\n",
+    "        \n",
+    "        print(*unique_nums)\n",
+    "        \n",
     "\n",
     "lst = [1, 2 ,3 ,4 ,5 ,1 ,2 ,3 ,4 ,5 ,1 ,2 ,3 ,4 ,5]\n",
     "duplicate_remove = DuplicateRemove(lst)\n",
+    "duplicate_remove.remove_using_set()\n",
     "duplicate_remove.remove_manually()\n",
-    "\n",
-    "\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
     "        "
    ]
   },
