--- a/Coding_Interview/spiral_order_matrix.ipynb
+++ b/Coding_Interview/spiral_order_matrix.ipynb
@@ -2,64 +2,104 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 2 3 4\n",
-      "1 2 3 4 8 12 16\n",
-      "1 2 3 4 8 12 16 15 14 13\n",
-      "1 2 3 4 8 12 16 15 14 13 9 5\n"
+      "[[1, 2, 3, 4, 5], [6, 7, 8, 9, 10], [11, 12, 13, 14, 15], [16, 17, 18, 19, 20], [21, 22, 23, 24, 25]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "matrix = []\n",
+    "num = 1\n",
+    "for i in range(n):\n",
+    "    new = []\n",
+    "    for j in range(n):\n",
+    "        new.append(num)\n",
+    "        num+=1\n",
+    "    matrix.append(new)\n",
+    "        \n",
+    "print(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dir 0 [1, 2, 3, 4, 5]\n",
+      "dir 1 [1, 2, 3, 4, 5, 10, 15, 20, 25]\n",
+      "dir 2 [1, 2, 3, 4, 5, 10, 15, 20, 25, 24, 23, 22, 21]\n",
+      "dir 3 [1, 2, 3, 4, 5, 10, 15, 20, 25, 24, 23, 22, 21, 16, 11, 6]\n",
+      "dir 0 [1, 2, 3, 4, 5, 10, 15, 20, 25, 24, 23, 22, 21, 16, 11, 6, 7, 8, 9]\n",
+      "dir 1 [1, 2, 3, 4, 5, 10, 15, 20, 25, 24, 23, 22, 21, 16, 11, 6, 7, 8, 9, 14, 19]\n",
+      "dir 2 [1, 2, 3, 4, 5, 10, 15, 20, 25, 24, 23, 22, 21, 16, 11, 6, 7, 8, 9, 14, 19, 18, 17]\n",
+      "dir 3 [1, 2, 3, 4, 5, 10, 15, 20, 25, 24, 23, 22, 21, 16, 11, 6, 7, 8, 9, 14, 19, 18, 17, 12]\n",
+      "dir 0 [1, 2, 3, 4, 5, 10, 15, 20, 25, 24, 23, 22, 21, 16, 11, 6, 7, 8, 9, 14, 19, 18, 17, 12, 13]\n"
      ]
     }
    ],
    "source": [
     "class SpiralOrderMatrix:\n",
-    "    \n",
     "    @staticmethod\n",
-    "    def make_spiral(matrix):\n",
-    "        linear_array = []\n",
+    "    def spiral_order_matrix(matrix):\n",
+    "        n = len(matrix[0])\n",
     "        m = len(matrix)\n",
-    "\n",
-    "        # left to right\n",
-    "        fst_row = matrix[0]\n",
-    "        for element in fst_row:\n",
-    "            linear_array.append(element)\n",
+    "        result_matrix = []\n",
+    "        left , right, top, bottom = 0, n-1, 0, m-1\n",
+    "        direction = 0\n",
+    "        \n",
+    "        while left<=right and top<=bottom:\n",
+    "            if direction ==0:\n",
+    "                for i in range(left, right+1):\n",
+    "                    result_matrix.append(matrix[left][i])\n",
+    "                print(\"dir 0\",result_matrix)\n",
+    "                top+=1\n",
     "            \n",
-    "        print(*linear_array)\n",
-    "        \n",
-    "        # Top to bottom\n",
-    "        for i in range(1, m):\n",
-    "            linear_array.append(matrix[i][m-1])\n",
-    "        \n",
-    "        print(*linear_array)\n",
-    "        \n",
-    "        # right to left\n",
-    "        for i in range(m, 1, -1):\n",
-    "            linear_array.append(matrix[m-1][i-2])\n",
-    "        \n",
-    "        print(*linear_array)\n",
-    "        \n",
-    "        # Bottom to Top\n",
-    "        for i in range(m-1, 1, -1):\n",
-    "            linear_array.append(matrix[i-1][m-4])\n",
-    "\n",
-    "        print(*linear_array)\n",
-    "\n",
-    "        \n",
+    "            elif direction ==1:\n",
+    "                for i in range(top,bottom+1):\n",
+    "                    result_matrix.append(matrix[i][right])\n",
+    "                print(\"dir 1\",result_matrix)\n",
+    "                right-=1\n",
     "            \n",
-    "matrix = [\n",
-    "    [1, 2, 3,4],\n",
-    "    [5, 6, 7, 8],\n",
-    "    [9, 10, 11, 12],\n",
-    "    [13, 14, 15, 16]\n",
-    "]\n",
-    "\n",
-    "SpiralOrderMatrix.make_spiral(matrix)"
+    "            elif direction ==2:\n",
+    "                for i in range(right, left-1, -1):\n",
+    "                    result_matrix.append(matrix[bottom][i])\n",
+    "                print(\"dir 2\",result_matrix)\n",
+    "                bottom-=1\n",
+    "            else:\n",
+    "                for i in range(bottom, top-1, -1):\n",
+    "                    result_matrix.append(matrix[i][left])\n",
+    "                left+=1\n",
+    "                print(\"dir 3\",result_matrix)\n",
+    "            \n",
+    "            direction = (direction+1)%4    \n",
+    "        \n",
+    "# matrix = [\n",
+    "#           [1, 2, 3, 4], \n",
+    "#           [5, 6, 7, 8], \n",
+    "#           [9, 10, 11, 12], \n",
+    "#           [13, 14, 15, 16]\n",
+    "#          ]\n",
+    "    \n",
+    "SpiralOrderMatrix.spiral_order_matrix(matrix)       "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
